# uca_deformation_sensing

./: .gitignore  README.md
ucr/uca_common_robotics/: CMakeLists.txt  package.xml
ucr/ucr_utils/ucr_data_collection/: CMakeLists.txt  README.md  package.xml  setup.py
ucr/ucr_utils/ucr_data_collection/config/: finger_experiment_params.yaml  topics_to_record.yaml  zhanat_experiment_one_finger_params.yaml  zhanat_experiment_params.yaml  zhanat_experiment_textures_params.yaml  zhanat_experiment_thumb_open_params.yaml
ucr/ucr_utils/ucr_data_collection/launch/: finger_data_experiment.launch  rosbag_recorder.launch  zhanat_experiment.launch  zhanat_experiment_one_finger.launch  zhanat_experiment_textures.launch  zhanat_experiment_thumb_open.launch
ucr/ucr_utils/ucr_data_collection/scripts/: finger_data_experiment  rosbag_recorder  zhanat_experiment  zhanat_experiment_one_finger  zhanat_experiment_textures  zhanat_experiment_thumb_open
ucr/ucr_utils/ucr_experiment_evaluation/: CMakeLists.txt  README.md  package.xml  setup.py
ucr/ucr_utils/ucr_experiment_evaluation/launch/: contact_localization_estimation.launch  contact_localization_evaluation.launch  force_estimation_evaluation.launch  grasp_deformable_object.launch  mesh_to_pointcloud.launch  tet_mesh_to_mesh.launch
ucr/ucr_utils/ucr_experiment_evaluation/scripts/: contact_localization_evaluation  grasp_deformable_object  mesh_to_point_cloud  tet_mesh_to_mesh
ucr/ucr_utils/ucr_utils/: CMakeLists.txt  package.xml
udom/uca_deformable_object_manipulation/: CMakeLists.txt  package.xml
udom/udom_control/udom_control/: CMakeLists.txt  package.xml
udom/udom_control/udom_control_msgs/: CMakeLists.txt  package.xml
udom/udom_control/udom_control_msgs/msg/: DualQuaternion.msg
udom/udom_control/udom_grasp_control/: CMakeLists.txt  README.md  package.xml  setup.py
udom/udom_control/udom_grasp_control/cfg/: ReactiveGraspParams.cfg
udom/udom_control/udom_grasp_control/config/: shadow_joint_info.yaml
udom/udom_control/udom_grasp_control/launch/: reactive_grasp_example.launch
udom/udom_control/udom_grasp_control/scripts/: reactive_grasp
udom/udom_control/udom_pose_control/: CMakeLists.txt  README.md  package.xml  setup.py
udom/udom_control/udom_pose_control/doc/: pose_controller.graphml
udom/udom_control/udom_pose_control/launch/: pose_controller.test  pose_controller_dq.test  pose_controller_dq_example.launch  pose_controller_dq_icra_experiments.launch  pose_controller_dq_interactive.launch  pose_controller_dq_interactive_kuka_real.launch  pose_controller_dq_interactive_kuka_sim.launch  pose_controller_example.launch  pose_controller_interactive.launch  pose_controller_interactive_kuka_sim.launch  pose_controller_kuka_real.launch  pose_mockup_gui_example.launch
udom/udom_control/udom_pose_control/script/: pose_controller  pose_mock_up_gui
udom/udom_control/udom_pose_control/test/: pose_controller_test.py
udom/udom_demo/udom_deformation_control/: CMakeLists.txt  README.md  package.xml  setup.py
udom/udom_demo/udom_deformation_control/doc/: deformation_control_pipeline.graphml
udom/udom_demo/udom_deformation_control/launch/: control_and_sensing.launch  control_and_sensing_bar.launch  control_and_sensing_block.launch  control_demo_bar.launch  deformation_control_demo.test  deformation_control_example.launch  deformation_model_solo_bar.launch  deformation_model_solo_block.launch  force_sensor_model_icra.launch
udom/udom_demo/udom_deformation_control/scripts/: coordinator_icra_node  coordinator_node
udom/udom_demo/udom_deformation_control/test/: deformation_control_demo_test.py
udom/udom_demo/udom_deformation_sensing/: CMakeLists.txt  README.md  package.xml  setup.py
udom/udom_demo/udom_deformation_sensing/config/: constrained_nodes.yaml  deformation_sensing_interactive_demo.rviz  objects_masses.yaml
udom/udom_demo/udom_deformation_sensing/doc/: deformation_sensing_pipeline.graphml
udom/udom_demo/udom_deformation_sensing/launch/: deformation_model_solo_bar.launch  deformation_model_solo_cube.launch  deformation_model_solo_sponge.launch  deformation_sensing_demo.launch  deformation_sensing_demo.test  deformation_sensing_experiment_bar.launch  deformation_sensing_experiment_cube.launch  deformation_sensing_experiment_sponge.launch  deformation_sensing_interactive_demo.launch  example_remote.launch  shadow_at_ctt.machine  tactile_and_force_solo_bar.launch  tactile_and_force_solo_cube.launch  tactile_and_force_solo_sponge.launch
udom/udom_demo/udom_deformation_sensing/scripts/: coordinator_full_node  coordinator_interactive_node  coordinator_node
udom/udom_demo/udom_deformation_sensing/test/: deformation_sensing_demo_test.py
udom/udom_demo/udom_demo/: CMakeLists.txt  package.xml
udom/udom_demo/udom_force_estimation/: CMakeLists.txt  README.md  package.xml  setup.py
udom/udom_demo/udom_force_estimation/data/: rf_foam_bar.bag
udom/udom_demo/udom_force_estimation/doc/: force_estimation_demo_sim.graphml
udom/udom_demo/udom_force_estimation/launch/: contact_localization_evaluation_real.launch  contact_localization_evaluation_sim.launch  force_estimation_demo_real.launch  force_estimation_demo_sim.launch  force_estimation_demo_sim.test
udom/udom_demo/udom_force_estimation/scripts/: coordinator_node
udom/udom_demo/udom_force_estimation/test/: force_estimation_demo_sim_test.py
udom/udom_demo/udom_grasping/: CMakeLists.txt  README.md  package.xml  setup.py
udom/udom_demo/udom_grasping/launch/: reactive_grasp_gui.launch  reactive_grasping_demo.launch
udom/udom_modeling/udom_deformation_modeling/: CMakeLists.txt  README.md  package.xml
udom/udom_modeling/udom_modeling/: CMakeLists.txt  package.xml
udom/udom_modeling/udom_modeling_msgs/: CMakeLists.txt  package.xml
udom/udom_modeling/vega_fem/: CMakeLists.txt  README.md  package.xml
udom/udom_perception/udom_contact_model/: CMakeLists.txt  README.md  package.xml  setup.py
udom/udom_perception/udom_perception/: CMakeLists.txt  package.xml
udom/udom_perception/udom_sensor_model/: CMakeLists.txt  README.md  package.xml  setup.py
(+243 files in other folders)
