<?xml version="1.0"?>
<package>
  <name>uca_common_robotics</name>
  <version>0.0.1</version>
  <description>
    General ROS metapackages which are robot independent.
  </description>
  <license>GPLv3</license>

  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>
  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
