<?xml version="1.0"?>
<package>
  <name>uca_deformable_object_manipulation</name>
  <version>0.0.1</version>
  <description>
    General ROS metapackages used for the robotic manipulation of deformable objects.
  </description>
  <license>GPLv3</license>

  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>
  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
