<?xml version="1.0"?>
<package>
  <name>ucr_experiment_evaluation</name>
  <version>0.1.0</version>
  <description>
    This package contains nodes that are used for conducting experimental evaluation.
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>udom_perception_msgs</run_depend>
  <run_depend>udom_modeling_msgs</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
