<?xml version="1.0"?>
<package>
  <name>udom_deformation_control</name>
  <version>0.1.0</version>
  <description>
    This package contains nodes to demonstrate deformation control.
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>udom_perception_msgs</build_depend>
  <build_depend>udom_modeling_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>udom_sensor_model</run_depend>
  <run_depend>udom_geometric_transformation</run_depend>
  <run_depend>udom_deformation_modeling</run_depend>
  <run_depend>udom_visualization</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>udom_perception_msgs</run_depend>
  <run_depend>udom_modeling_msgs</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
</package>
