<?xml version="1.0"?>
<package>
  <name>udom_deformation_modeling</name>
  <version>0.1.0</version>
  <description>
    This package contains nodes to simulate the deformation of an object.
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>udom_modeling_msgs</build_depend>
  <build_depend>vega_fem</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosunit</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>udom_modeling_msgs</run_depend>
  <run_depend>vega_fem</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
