<?xml version="1.0"?>
<package>
  <name>udom_contact_model</name>
  <version>0.1.0</version>
  <description>
  This package contains contact models for tactile sensors based on different assumptions.
  </description>
  <license>GPLv3</license>

  <maintainer email="jose.sanchez.loza@gmail.com">Jose Sanchez</maintainer>
  <author email="jose.sanchez.loza@gmail.com">Jose Sanchez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>udom_common_msgs</build_depend>
  <build_depend>udom_perception_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>udom_common_msgs</run_depend>
  <run_depend>udom_perception_msgs</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

</package>
